# LLVM-course

./: .gitignore  README.md
00 SDL/: app.c  sim.c  start.c
01 SDL/: README.md
01 SDL/IR/: combined.bc  combined.ll
01 SDL/include/: sim.h
01 SDL/src/: app.c  sim.c
01_SDL/: README.md
01_SDL/IR/: app-O1.ll  app-Os.ll
01_SDL/include/: sim.h
01_SDL/special_instructions/: main-O1.ll  main.c
01_SDL/src/: app.c  start.c
02_LLVM_Pass/: .gitignore  README.md  analyze.py  app.after_pass.ll  app.ll  log.c  pass_trace.cpp  run.sh  smart_analyze.py
02_LLVM_Pass/smart_statistics/: top_patterns.txt
03_LLVM_IRGen/: CMakeLists.txt  README.md  out.ll  target_app.ll
03_LLVM_IRGen/include/: generator.hpp
03_LLVM_IRGen/src/: generator.cpp  main.cpp
04_ASM2IR/: .gitignore  CMakeLists.txt  README.md  app-original.ll  app.asm  emulate_output.ll  fullIR_ouput.ll  output.ll
04_ASM2IR/asm/: example.s
04_ASM2IR/examples/: app.asm  app1.asm  app2.asm  app3.asm  app4.asm  app_comments.asm  asm.s  draw_grid.asm  draw_red_square.asm  first_test.s
04_ASM2IR/examples/testing/: ALGR.asm  AND.asm  ANDi.asm  BR_COND.asm  CMP_GE.asm  INC_EQ.asm  MEMCPY.asm  MEMSET.asm  OR.asm  SHL.asm  comments.asm  draw_grid.asm  draw_square.asm
04_ASM2IR/include/: AsmParser.hpp  CPU.hpp  EmulateIR.hpp  FullIR.h  FullIR.hpp  IRGenerator.hpp  ISA.hpp  Instructions.hpp  sim.h
04_ASM2IR/src/: AsmParser.cpp  CPU.cpp  EmulateIR.cpp  FullIR.cpp  IRGenerator.cpp  main.cpp  sim.c
05_LANG2IR/: .gitignore  CMakeLists.txt  README.md  app.c  app.ll  app_rus.ll  run.sh  test.txt
05_LANG2IR/examples/: test1.lang  test10.lang  test10.txt  test11.lang  test11.txt  test12-1.lang  test12-2.lang  test12-3.lang  test12-4.lang  test12-5.lang  test12-6.lang  test13.lang  test14.lang  test15.lang  test2.lang  test2.txt  test3.lang  test3.txt  test4.lang  test4.txt  test5.lang  test5.txt  test6.lang  test6.txt  test7.lang  test7.txt  test8.lang  test8.txt  test9.lang  test9.txt
05_LANG2IR/grammar/: lang.g4
05_LANG2IR/grammar/.antlr/: lang.interp  langLexer.java  langParser.java
05_LANG2IR/include/: IRGenerator.hpp  sim.h  visitor.hpp
05_LANG2IR/src/: IRGenerator.cpp  main.cpp  sim.c  visitor.cpp
06_LLVM_Backend/01_RegTarget/: README.md
06_LLVM_Backend/02_GenAsm/: README.md
06_LLVM_Backend/03_GenBin/: README.md
06_LLVM_Backend/04_GenGraphicAsm/: README.md
06_LLVM_Backend/04_SimpleGenGraphic/: README.md
06_LLVM_Backend/05_FullGenGraphic/: app.s
